--- a/poster_generator/pubspec.yaml
+++ b/poster_generator/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  lottie: ^3.1.0
+  http: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,7 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
-  #   - images/a_dot_ham.jpeg
+     - assets/animations/animation.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
